hphp/hack/test/typecheck/is_expression/tuple.php
<?hh

function g((int, int, string) $x): void {}

function f(mixed $x): void {
  if ($x is (int, int, string)) {
    g($x);
  }
}
